--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest"
+    "test": "jest --forceExit"
   },
   "dependencies": {
     "bcrypt": "^1.0.3",
@@ -28,6 +28,7 @@
     "testEnvironment": "node"
   },
   "devDependencies": {
+    "faker": "^4.1.0",
     "jest": "^22.0.3"
   }
 }
