--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "faker": "^4.1.0",
-    "jest": "^22.0.3"
+    "jest": "^22.0.3",
+    "supertest": "^3.0.0"
   }
 }
