--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest --forceExit"
+    "test": "jest --forceExit",
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "bcrypt": "^1.0.3",
@@ -28,6 +29,10 @@
     "testEnvironment": "node"
   },
   "devDependencies": {
+    "eslint": "^4.14.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jest": "^21.5.0",
     "faker": "^4.1.0",
     "jest": "^22.0.3",
     "supertest": "^3.0.0"
