--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "debug": "^3.1.0",
     "express": "^4.16.2",
     "express-boom": "^2.0.0",
+    "express-graphql": "^0.6.11",
+    "graphql": "^0.11.0",
     "helmet": "^3.9.0",
     "jsonwebtoken": "^8.1.0",
     "knex": "^0.13.0",
