--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "apollo-server-express": "^1.3.2",
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
@@ -16,8 +17,8 @@
     "debug": "^3.1.0",
     "express": "^4.16.2",
     "express-boom": "^2.0.0",
-    "express-graphql": "^0.6.11",
     "graphql": "^0.11.0",
+    "graphql-tools": "^2.17.0",
     "helmet": "^3.9.0",
     "jsonwebtoken": "^8.1.0",
     "knex": "^0.13.0",
