--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node ./build/bin/www",
     "test": "jest --forceExit",
     "lint": "eslint . --fix"
+  },
+  "engines": {
+    "node": ">= 8.5.0"
   },
   "dependencies": {
     "apollo-server-express": "^1.3.2",
@@ -20,6 +23,7 @@
     "graphql": "^0.11.0",
     "graphql-tools": "^2.17.0",
     "helmet": "^3.9.0",
+    "http-errors": "^1.6.2",
     "jsonwebtoken": "^8.1.0",
     "knex": "^0.13.0",
     "morgan": "^1.9.0",
@@ -29,15 +33,46 @@
     "uuid": "^3.1.0"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/build/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   },
   "devDependencies": {
+    "@types/bcrypt": "^1.0.0",
+    "@types/bluebird": "^3.5.19",
+    "@types/bookshelf": "^0.9.7",
+    "@types/express": "^4.11.0",
+    "@types/faker": "^4.1.2",
+    "@types/helmet": "0.0.37",
+    "@types/http-errors": "^1.6.1",
+    "@types/jest": "^22.0.1",
+    "@types/jsonwebtoken": "^7.2.5",
+    "@types/knex": "^0.14.0",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^9.3.0",
+    "@types/passport": "^0.4.2",
+    "@types/passport-jwt": "^3.0.0",
+    "@types/uuid": "^3.4.3",
     "eslint": "^4.14.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jest": "^21.5.0",
     "faker": "^4.1.0",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^4.0.0-alpha.1",
     "jest": "^22.0.3",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "ts-jest": "^22.0.1",
+    "typescript": "^2.6.2"
   }
 }
