--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./build/bin/www",
+    "start": "node ./bin/www",
     "test": "jest --forceExit",
     "lint": "eslint . --fix"
   },
