--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "jest --forceExit",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "build": "gulp",
+    "postinstall": "npm run build"
   },
   "engines": {
     "node": ">= 8.5.0"
@@ -22,6 +24,8 @@
     "express-boom": "^2.0.0",
     "graphql": "^0.11.0",
     "graphql-tools": "^2.17.0",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^4.0.0-alpha.1",
     "helmet": "^3.9.0",
     "http-errors": "^1.6.2",
     "jsonwebtoken": "^8.1.0",
@@ -30,6 +34,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
     "pg": "^7.4.0",
+    "typescript": "^2.6.2",
     "uuid": "^3.1.0"
   },
   "jest": {
@@ -68,11 +73,8 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jest": "^21.5.0",
     "faker": "^4.1.0",
-    "gulp": "^3.9.1",
-    "gulp-typescript": "^4.0.0-alpha.1",
     "jest": "^22.0.3",
     "supertest": "^3.0.0",
-    "ts-jest": "^22.0.1",
-    "typescript": "^2.6.2"
+    "ts-jest": "^22.0.1"
   }
 }
