--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "outDir": "./build",
     "allowJs": true,
-    "target": "esnext",
+    "target": "es2017",
     "removeComments": true,
   },
   "include": [
@@ -11,6 +11,7 @@
   ],
   "exclude": [
     "./src/__tests__/**/*",
+    "./src/interfaces/**/*",
     "./src/db_reset.ts"
   ]
 }
